--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -23593,6 +23593,83 @@ references:
   commentId: N:WarcraftLegacies.Source.Quests
   fullName: WarcraftLegacies.Source.Quests
   nameWithType: WarcraftLegacies.Source.Quests
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn
+  name: WarcraftLegacies.Source.Quests.CrisisSpawn
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.html
+  commentId: N:WarcraftLegacies.Source.Quests.CrisisSpawn
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn
+  nameWithType: WarcraftLegacies.Source.Quests.CrisisSpawn
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn
+  name: QuestCthunSpawn
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html
+  commentId: T:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn
+  nameWithType: QuestCthunSpawn
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.#ctor(Rectangle)
+  name: QuestCthunSpawn(Rectangle)
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn__ctor_Rectangle_
+  commentId: M:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.#ctor(Rectangle)
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.QuestCthunSpawn(Rectangle)
+  nameWithType: QuestCthunSpawn.QuestCthunSpawn(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.#ctor*
+  name: QuestCthunSpawn
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.QuestCthunSpawn
+  nameWithType: QuestCthunSpawn.QuestCthunSpawn
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnAdd(MacroTools.FactionSystem.Faction)
+  name: OnAdd(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn_OnAdd_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnAdd(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnAdd(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestCthunSpawn.OnAdd(Faction)
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnAdd*
+  name: OnAdd
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn_OnAdd_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnAdd
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnAdd
+  nameWithType: QuestCthunSpawn.OnAdd
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestCthunSpawn.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.OnComplete
+  nameWithType: QuestCthunSpawn.OnComplete
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardDescription
+  nameWithType: QuestCthunSpawn.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardDescription
+  nameWithType: QuestCthunSpawn.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardFlavour
+  nameWithType: QuestCthunSpawn.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestCthunSpawn_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardFlavour
+  nameWithType: QuestCthunSpawn.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.Dalaran
   name: WarcraftLegacies.Source.Quests.Dalaran
   href: api-source/WarcraftLegacies.Source.Quests.Dalaran.html
